iac/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myrnews-bot
  namespace: bots
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myrnews-bot
  template:
    metadata:
      labels:
        app: myrnews-bot
    spec:
      dnsConfig:
        nameservers:
          - "8.8.8.8"
          - "8.8.4.4"
      containers:
        - name: myrnews-bot
          image: myrotvorets/myrnews-tgbot:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3010
          volumeMounts:
            - mountPath: /tmp
              name: tmp
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
      volumes:
        - name: tmp
          emptyDir: {}
