iac/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myrnews-bot
  namespace: bots
spec:
  selector:
    app: myrnews-bot
  ports:
    - protocol: TCP
      port: 3010
      targetPort: 3010
